--- a/SixRens.UI.Avalonia/SixRens.UI.Avalonia/Views/MainWindow.axaml
+++ b/SixRens.UI.Avalonia/SixRens.UI.Avalonia/Views/MainWindow.axaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SixRens.UI.Avalonia.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/icon.ico"
         Title="SixRens.UI.Avalonia">
 
     <Design.DataContext>
