--- a/SixRens.UI.Avalonia/SixRens.UI.Avalonia/Windows/About/AboutWindow.axaml
+++ b/SixRens.UI.Avalonia/SixRens.UI.Avalonia/Windows/About/AboutWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SixRens.UI.Avalonia.Views.PluginConfigurationWindow.PluginConfigurationWindow"
-        Title="PluginConfigurationWindow">
+        x:Class="SixRens.UI.Avalonia.Windows.About.AboutWindow"
+        Title="AboutWindow">
   Welcome to Avalonia!
 </Window>
